Python-app-task/task4/pod1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-service1
spec:
  ports:
  - port: 31234
    nodePort: 30001
    targetPort: python-port1
    protocol: TCP
  selector:
    app: hello-docker-python1
  type: NodePort
