Python-app-task/task4/pod2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-service2
spec:
  ports:
  - port: 31234
    nodePort: 30002
    targetPort: python-port2
    protocol: TCP
  selector:
    app: hello-docker-python2
  type: NodePort
