Python-app-task/task4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: pod-python-rules
spec:
  rules:
  - host: pod-python1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pod-service1
          servicePort: 80
  - host: pod-python2.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pod-service2
          servicePort: 80
